Server is ready/implement/

--- a/ConsoleClientTCP-IP/ConsoleClientTCP-IP.vbproj
+++ b/ConsoleClientTCP-IP/ConsoleClientTCP-IP.vbproj
@@ -6,9 +6,9 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{F7860D03-6E15-4A7F-B138-20D8E9CF2E65}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <StartupObject>ConsoleClientTCP_IP.Module1</StartupObject>
+    <StartupObject>ConsoleClientTCP_IP.client</StartupObject>
     <RootNamespace>ConsoleClientTCP_IP</RootNamespace>
-    <AssemblyName>ConsoleClientTCP_IP</AssemblyName>
+    <AssemblyName>ConsoleClientTCP-IP</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Console</MyType>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
@@ -20,7 +20,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>ConsoleClientTCP_IP.xml</DocumentationFile>
+    <DocumentationFile>ConsoleClientTCP-IP.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -30,7 +30,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>ConsoleClientTCP_IP.xml</DocumentationFile>
+    <DocumentationFile>ConsoleClientTCP-IP.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
@@ -67,7 +67,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Module1.vb" />
+    <Compile Include="client.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
